// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="MuiTypography-root PicassoTypography-bodyInherit MuiTypography-body1"
    >
      Just Typography
    </p>
  </div>
</div>
`;

exports[`Typography inherit size render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="MuiTypography-root PicassoTypography-bodyInherit MuiTypography-body1"
    >
      Inherit font size
    </p>
  </div>
</div>
`;

exports[`Typography variant heading small render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <h4
      class="MuiTypography-root PicassoTypography-headingSmall MuiTypography-h4"
    >
      Heading small
    </h4>
  </div>
</div>
`;
